[tool.poetry]
name = "all-tools"
version = "0.1.0"
description = "A repo to plug _all_ python related code tools I can find"
authors = ["Felipe 'Bidu' Rodrigues <felipe@felipevr.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.10-beta.0", allow-prereleases = true}
hypothesis = "^5.24.0"
ipython = "^7.13"
mccabe = "^0.6.1"
pre-commit = {version = "^2.0"}
prospector = {version = "^1.3.0", extras = ["all"]}
pylint = "^2.4"
pytest = {version = "^5.3"}
pytest-cov = "^2.10.0"
schemathesis = "^2.3.3"
vulture = "^1.6"
wily = "^1.18.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
